Fix header icons to align left, rather than the headers themselves

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -60,7 +60,7 @@ h1 {
     font-weight: 300;
     color: lighten($black, 15%);
     margin: 3rem 0 2rem;
-    .section-inside > & {
+    .fa {
       margin-left: -2rem;
     }
 }
